<resources>
    <string name="app_name">Simple Notes</string>
    <string name="add_note">Add Note</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>

    <string name="title_cannot_be_empty">Title cannot be empty</string>
    <string name="date_cannot_be_empty">Date cannot be empty</string>

    <string name="edit_due_date">Edit date</string>
    <string name="note">Note</string>

    <string name="set_due_date">Set Due Date</string>
    <string name="set_due_time">Set Due Time</string>

    <string name="delete_due_date">Delete Due Date</string>
    <string name="show_note_creation_container">Show note creation container</string>

    // dialog_delete
    <string name="delete_note">Delete note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="channel_name">Channel Name</string>
    <string name="channel_description">channel_description</string>

    <string name="click_to_restart">click_to_restart</string>
    <string name="download_complete">download_complete</string>
</resources>