<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/activityBackground"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/titleTv"
        style="@style/TitleDeleteDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_marginTop="16dp"
        android:id="@+id/yesBtn"
        style="@style/DeleteDialogYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTv"
        app:layout_constraintEnd_toStartOf="@id/noBtn"/>

    <Button
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:id="@+id/noBtn"
        style="@style/DeleteDialogNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTv"
        app:layout_constraintStart_toEndOf="@id/yesBtn"/>


</androidx.constraintlayout.widget.ConstraintLayout>